# dev_chatrooms

./: .env.example  .gitignore  BACKEND_ARCHITECTURE.md  BACKEND_SUMMARY.md  BACKEND_TESTING.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  INDEX.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  QUICK_REF.md  QUICK_REFERENCE.md  README.md  backend_plan.md  docker-compose.yml  index.html  package-lock.json  package.json  plan.md
backend/: .env  .env.example  README.md  ai_service.py  auth.py  database.py  dev_chat.db  main.py  pyproject.toml  requirements.txt  schemas.py  seed.py  test_auth.py
backend/app/: auth.py  db.py  models.py
backend/app/routes/: auth.py  reactions.py  roles.py  rooms.py  settings.py  users.py  ws.py
database/: init.sql
frontend/: package-lock.json
frontend/src/: App.svelte
frontend/src/lib/: ChatApp.svelte  ChatWindow.svelte  Home.svelte  Login.svelte  RoomSettings.svelte  Sidebar.svelte  Signup.svelte  UserProfile.svelte  api.js
src/: App.jsx
src/components/: AIResponseCard.jsx  ChatInput.jsx  CodeBlock.jsx  CreateRoomModal.jsx  MessageBubble.jsx  MockChat.jsx  Navbar.jsx  RoomCard.jsx  Sidebar.jsx
src/contexts/: AuthContext.jsx  RoomContext.jsx
src/pages/: AdminPanel.jsx  Auth.jsx  ChatRoom.jsx  CreateRoom.jsx  Dashboard.jsx  DesignGuide.jsx  Invite.jsx  Landing.jsx  Profile.jsx  WorkspaceOnboarding.jsx
src/services/: api.js  socket.js
src/styles/: design-guide.css  index.css
