[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "google-generativeai>=0.8.6",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-socketio[asyncio]>=5.16.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
